# zhdiary-web

./: .gitignore  README.md  package.json  pyproject.toml  server.py  tsconfig.json  webpack.dev.js  webpack.prod.js
public/: index.html  loading.css
py/: __main__.py  create.py
src/: open-browser.ts
src/backend/: server.ts
src/backend/db/: MongoQParser.ts  SearchResource.ts  index.ts
src/backend/middleware/: needUserId.ts
src/backend/route/: card.ts  deck.ts  quiz.ts
src/backend/search/: QueryParser.ts  SearchResource.ts  util.ts
src/backend/zh/: juuku.ts  template.ts
src/migration/: 00-create-indexes.ts  01-create-default-user.ts
src/node/: server.ts  tsconfig.json  util.ts
src/node/api/: auth.ts  editor.ts  io.ts  quiz.ts
src/node/auth/: auth0.ts  token.ts
src/node/engine/: db.ts  quiz.ts  search.ts  zh.ts
src/node/middleware/: needUserId.ts
src/python/: auth.py  config.py  db.py  ext.py  server.py
src/python/api/: editor.py  io.py  media.py  quiz.py  util.py
src/python/engine/: db.py  search.py  template.py
src/script/: build-mongo-zh.ts  export-to-web.ts  generate-secret.js  generate-secret.ts  get-keys.ts  md2html.ts  optimize.ts  test-jieba.ts  test-jwt.ts  test-md2html.ts  zh-update.js
src/server/: index.ts  tsconfig.json  util.ts
src/server/db/: SearchParser.ts  SearchResource.ts  TemplateResource.ts  index.ts
src/server/middleware/: needUserId.ts  userInViews.ts
src/web/: Front.ts  cardEditor.ts  common.css  common.ts  deckViewer.ts  index.scss  index.ts  shared.ts  util.ts
views/: index.njk
views/layout/: min.njk
(+35 files in other folders)
